# OperatingSystems-AGH-Course

./: .gitignore  CMakeLists.txt  README.md  universal_makefile_template.txt
lab1/: Makefile  countdown.c
lab10/: Makefile  zad1  zad1.c
lab11/: client.c  server.c
lab12/: client.c  server.c
lab2/: Makefile  client.c  collatz.c  collatz.h
lab3/: Makefile  flipper.c
lab4/: Makefile  zad1.c  zad2.c
lab5/: Makefile  catcher.c  sender.c  zad1.c
lab6/: Makefile  zad1.c  zad2_1.c  zad2_2.c
lab7/: Makefile  client.c  server.c
lab8/: Makefile  init.c  printer.c  user.c
lab9/: zad1.c
test_2/: main.c
